[package]
name = "http-load-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
clap = { version = "4.2.1", features = ["derive"]}
hyper = {version = "0.14.24", features = ["full"]}
tokio = {version = "1.25.0", features = ["full"]}
