[package]
name = "http-load-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-load-gen-lib = { "path" = "../http-load-gen-lib"}
clap = { version = "4.2.1", features = ["derive"]}
indicatif = "0.17.3"
hyper = {version = "0.14.24", features = ["full"]}
tokio = {version = "1.25.0", features = ["full"]}
tabled = "0.11.1"
